--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		<meta name="theme-color" content="#000000">
 		<meta content="IE=Edge" http-equiv="X-UA-Compatible">
 		<title>VK Mini App Boilerplate</title>
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
 	</head>
 	<body>
 		<div id="root"></div>
